k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: idmatr
  labels:
    app.kubernetes.io/name: idmatr
